# tttech-tsn-swch-content

st.stm32-deip/: Makefile  stm32_deip.c
tsn_sw_base.edge-lkm/: Makefile  altera_pio.c  altera_pio.h  edge.h  edge_ac.c  edge_ac.h  edge_br_fdb.c  edge_br_fdb.h  edge_br_sid.c  edge_br_sid.h  edge_br_sid2.c  edge_br_vlan.c  edge_br_vlan.h  edge_bridge.c  edge_bridge.h  edge_com.c  edge_com.h  edge_com_dma.c  edge_com_intern.h  edge_com_ts.c  edge_com_ts.h  edge_com_xmii.c  edge_defines.h  edge_fqtss.c  edge_fqtss.h  edge_frer.c  edge_frer.h  edge_link.c  edge_link.h  edge_mdio.c  edge_mdio.h  edge_pcie.c  edge_pcie_c10.c  edge_platform.c  edge_port.c  edge_port.h  edge_preempt.c  edge_preempt.h  edge_psfp.c  edge_psfp.h  (+10 more)
tsn_sw_base.net-snmp-mibs/: Doxyfile  MIBs_version.xlsx
tsn_sw_base.net-snmp-mibs/ieee8021BridgeMib-mib-module/: IEEE8021-BRIDGE-MIB  IEEE8021-TC-MIB  Makefile  README.txt  build.bash  ieee8021BridgeMib.c
tsn_sw_base.net-snmp-mibs/ieee8021BridgeMib-mib-module/ieee8021BridgeBasePortTable/: ieee8021BridgeBasePortTable.c  ieee8021BridgeBasePortTable.h
tsn_sw_base.net-snmp-mibs/ieee8021BridgeMib-mib-module/ieee8021BridgeBaseTable/: ieee8021BridgeBaseTable.c  ieee8021BridgeBaseTable.h
tsn_sw_base.net-snmp-mibs/ieee8021BridgeMib-mib-module/ieee8021BridgeMib_helpers/: ieee8021BridgeMib_helpers.c  ieee8021BridgeMib_helpers.h
tsn_sw_base.net-snmp-mibs/ieee8021BridgeMib-mib-module/ieee8021BridgePhyPortTable/: ieee8021BridgePhyPortTable.c  ieee8021BridgePhyPortTable.h
tsn_sw_base.net-snmp-mibs/ieee8021BridgeMib-mib-module/ieee8021BridgePortPriorityTable/: ieee8021BridgePortPriorityTable.c  ieee8021BridgePortPriorityTable.h
tsn_sw_base.net-snmp-mibs/ieee8021BridgeMib-mib-module/ieee8021BridgeTrafficClassTable/: ieee8021BridgeTrafficClassTable.c  ieee8021BridgeTrafficClassTable.h
tsn_sw_base.net-snmp-mibs/ieee8021MstpMib-module/: Makefile  OIDs.txt  README.txt  build.bash  ieee8021MstpMib.c
tsn_sw_base.net-snmp-mibs/ieee8021MstpMib-module/ieee8021MstpCistPortTable/: ieee8021MstpCistPortTable.c  ieee8021MstpCistPortTable.h
tsn_sw_base.net-snmp-mibs/ieee8021MstpMib-module/ieee8021MstpCistTable/: ieee8021MstpCistTable.c  ieee8021MstpCistTable.h
tsn_sw_base.net-snmp-mibs/ieee8021MstpMib-module/ieee8021MstpConfigIdTable/: ieee8021MstpConfigIdTable.c  ieee8021MstpConfigIdTable.h
tsn_sw_base.net-snmp-mibs/ieee8021QBridgeMib-mib-module/: Makefile  README.txt  build.bash  ieee8021QBridgeMib.c
tsn_sw_base.net-snmp-mibs/tests/: Docker_README.txt  Dockerfile  README.txt  main.py  requirements.txt  test.sh
tsn_sw_base.netopeer-modules/: .gitignore  8021Q-YANG-status.xlsx  Doxyfile  start_all_dev_unit_tests.bash  start_libbase_dev_unit_tests.bash
tsn_sw_base.netopeer-modules/libbase/: Makefile  README.txt  install_lib.bash  project.yml
tsn_sw_base.sysrepo-plugins/: README.txt  restore_datastore
tsn_sw_base.sysrepo-plugins/YANG_modules_repository/: ieee1588-ptp.yang  ieee802-dot1cb-stream-identification-params.yang  ieee802-dot1q-bridge-delays.yang  ieee802-dot1q-bridge.yang  ieee802-dot1q-psfp.yang  ieee802-dot1q-sched.yang  ieee802-dot1q-types.yang  ieee802-dot3br-preempt.yang  sysrepo-module-versions.yang
tsn_sw_base.sysrepo-plugins/common/: bmp.c  bmp.h  common.c  common.h  common_defines.h  config_change.c  config_change.h
tsn_sw_base.sysrepo-plugins/ieee802-dot1ab-lldp-yang-module/: CMakeLists.txt  README.txt  ieee802-dot1ab-lldp-yang-module.c  ieee802-dot1ab-lldp.data.xml  lldp_defines.h
tsn_sw_base.sysrepo-plugins/ieee802-dot1cb-frer-yang-module/: CMakeLists.txt  README.txt  frer_defines.h  ieee802-dot1cb-frer-module-changes.txt  ieee802-dot1cb-frer-module-configuration.xml  ieee802-dot1cb-frer-yang-module.c
tsn_sw_base.sysrepo-plugins/ieee802-dot1cb-stream-identification-params-yang-module/: CMakeLists.txt  README.txt  ieee802-dot1cb-stream-identification-params-yang-module.c  stream_identification_params_defines.h
tsn_sw_base.sysrepo-plugins/ieee802-dot1cb-stream-identification-yang-module/: CMakeLists.txt  README.txt  create_frer_and_stream_id_entries.sh  ieee802-dot1cb-stream-identification-configuration.xml  ieee802-dot1cb-stream-identification-yang-module.c  stream_identification_defines.h
tsn_sw_base.sysrepo-plugins/ieee802-dot1q-bridge-yang-module/: CMakeLists.txt  README.txt  ieee802-dot1q-bridge-yang-module.c  ieee802-dot1q-bridge.data.xml  q_bridge_defines.h
tsn_sw_base.sysrepo-plugins/ieee802-dot1q-fqtss-yang-module/: CMakeLists.txt  README.txt  fqtss_defines.h  ieee802-dot1q-fqtss.c  ieee802-dot1q-fqtss.data.xml
tsn_sw_base.sysrepo-plugins/ieee8021-mstp-yang-module/: CMakeLists.txt  README.txt  ieee8021-mstp.c  ieee8021-mstp.data.xml  mstp_defines.h
tsn_sw_base.sysrepo-plugins/ietf-interfaces-yang-module/: CMakeLists.txt  README.txt  ietf-interfaces.c  ietf_interfaces_defines.h
tsn_sw_base.sysrepo-plugins/ietf-interfaces-yang-module/source/: bridge_port.c  bridge_port.h  bridge_port_delays.c  bridge_port_delays.h  ethernet.c  ethernet.h  frer_statistics.c  frer_statistics.h  preempt.c  preempt.h  preemption.c  preemption.h  sched.c  sched.h  stream_identification_statistics.c  stream_identification_statistics.h
tsn_sw_base.sysrepo-plugins/sysrepo-module-versions-yang-module/: CMakeLists.txt  README.txt  YANG-modules-versions.xlsx  sysrepo-module-versions.c  sysrepo-module-versions.data.xml
tsn_sw_base.tsntool/: .gitignore  Makefile
tsn_sw_base.tsntool/doc/: Doxyfile
tsn_sw_base.tsntool/examples/: example.st.cfg
tsn_sw_base.tsntool/lib/: tsn.c  tsn.h  tsn_bridge.c  tsn_bridge.h  tsn_def.h  tsn_edgex.c  tsn_edgex.h  tsn_error.c  tsn_error.h  tsn_fqtss.c  tsn_fqtss.h  tsn_frer.c  tsn_frer.h  tsn_mstp.c  tsn_mstp.h  tsn_preemp.c  tsn_preemp.h  tsn_private.h  tsn_psfp.c  tsn_psfp.h  tsn_qbridge.c  tsn_qbridge.h  tsn_sid.c  tsn_sid.h  tsn_st.c  tsn_st.h
tsn_sw_base.tsntool/man/: tsntool.8
tsn_sw_base.tsntool/test/: readme.md
tsn_sw_base.tsntool/test/tsnlib/: util.py  (+7 more)
tsn_sw_base.tsntool/tsntool/: brport.c  edge.c  fqtss.c  frer.c  mstp.c  preempt.c  psfp.c  qbridge.c  sid.c  st.c  tsntool.c  tsntool.h  util.c
(+374 files in other folders)
